ヘッダーのレイアウト修正完了

--- a/app/assets/stylesheets/default_application.scss
+++ b/app/assets/stylesheets/default_application.scss
@@ -181,8 +181,8 @@ li.search a:hover {
   }
 
   .sp_my_page {
-    float: right;
-    margin-right: 10px;
+    // float: right;
+    // margin-right: 10px;
     margin-top: 10px;
     zoom: 1.5;
   }
@@ -204,9 +204,9 @@ li.search a:hover {
 
   .sp_search {
     display: block;
-    float: right;
+    // float: right;
     margin-top: 10px;
-    margin-right: 18px;
+    // margin-right: 18px;
     zoom: 1.5;
   }
 }
