--- a/app/views/layouts/default_layout.html.erb
+++ b/app/views/layouts/default_layout.html.erb
@@ -13,25 +13,25 @@
 <nav class="navbar">
   <div class="container-fluid container">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+    <div class="navbar-header sp-navbar-header">
+<!--     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </button>
-
-      <div class="search sp_search">
-      <a data-toggle="modal" href="#myModal_search">
-        <span class="glyphicon glyphicon-search" aria-hidden="true" style="color: black;"></span>
-      </a>
+    </button> -->
+      <div class="search sp_search col-xs-2">
+        <a data-toggle="modal" href="#myModal_search">
+          <span class="glyphicon glyphicon-search" aria-hidden="true" style="color: black;"></span>
+        </a>
       </div>
-      <div class="search sp_my_page">
+      <div class="logo col-xs-8"><a href="/">Shares!</a></div>
+      <div class="search sp_my_page col-xs-2">
         <%= link_to "/users/#{current_user.nickname}" do %>
                 <span class="glyphicon glyphicon-user" aria-hidden="true" style="color: black;"></span>
         <% end %>
       </div>
-      <div class="logo"><a href="/">Shares!</a></div>
+
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
