--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,4 +4,20 @@
   	<div class="user clearfix">
     	<%= render partial: "user", collection: @users %>
   	</div>
+	<!-- 検索画面モーダル開始 -->
+	<div class="modal fade" id="myModal_search">
+	<div class="modal-dialog">
+	  <div class="modal-content">
+	    <div class="modal-header">
+	      <button class="close" data-dismiss="modal">&times;</button>
+	      <p class="modal-title">キーワードで検索する</p>
+	    </div>
+	  <%= form_tag("/searches/search", method: :get) do %>
+	    <input type="text", autofocus, placeholder="キーワードで検索", name="title", html: {class: "form-controll">
+	    <label><input type="submit" value="" id="search"></label>
+	  <% end %>
+	  </div>
+	</div>
+	</div>
+	<!-- モーダル終了 -->
 </div>
