--- a/app/views/layouts/default_layout.html.erb
+++ b/app/views/layouts/default_layout.html.erb
@@ -14,22 +14,23 @@
   <div class="container-fluid container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header sp-navbar-header">
-<!--     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+    <button type="button" class="navbar-toggle collapsed col-xs-1.5" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-    </button> -->
-      <div class="search sp_search col-xs-2">
+    </button>
+
+      <div class="logo col-xs-9"><a href="/">Shares!</a></div>
+      <!-- <div class="search sp_my_page col-xs-2">
+        <%#= link_to "/users/#{current_user.nickname}" do %>
+                <span class="glyphicon glyphicon-user" aria-hidden="true" style="color: black;"></span>
+        <%# end %>
+      </div> -->
+      <div class="search sp_search col-xs-1.5">
         <a data-toggle="modal" href="#myModal_search">
           <span class="glyphicon glyphicon-search" aria-hidden="true" style="color: black;"></span>
         </a>
-      </div>
-      <div class="logo col-xs-8"><a href="/">Shares!</a></div>
-      <div class="search sp_my_page col-xs-2">
-        <%= link_to "/users/#{current_user.nickname}" do %>
-                <span class="glyphicon glyphicon-user" aria-hidden="true" style="color: black;"></span>
-        <% end %>
       </div>
 
     </div>
@@ -55,9 +56,20 @@
           <div class="name">
             <%= link_to "#{current_user.nickname}", "/users/#{current_user.nickname}" %>
           </div>
+          <li class="sp_menu">
+            <a data-toggle="modal" href="#myModal">新規グループ作成</a>
+          </li>
+          <li class="sp_menu">
+            <%= link_to "マイページ", "/users/#{current_user.nickname}" %>
+          </li>
+          <li class="sp_menu">
+            <%= link_to 'サインアウト',  destroy_user_session_path, method: :delete %>
+          </li>
 
         <% elsif controller.controller_name == "pages" %>
-
+          <li class="sp_menu">
+            <a data-toggle="modal" href="#myModal">ページを保存する</a>
+          </li>
           <li>
             <%= link_to 'メンバー一覧', "/groups/#{@group.id}/users" %>
           </li>
