--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -73,7 +73,8 @@ html body {
 
 .service_message p {
   color: #ffffff;
-  margin-top: 30px;
+  margin-top: 40px;
+  line-height: 2;
 }
 
 @media (min-width: 768px) {
