--- a/app/assets/stylesheets/default_application.scss
+++ b/app/assets/stylesheets/default_application.scss
@@ -25,17 +25,6 @@
 }
 
 
-.navi a {
-  color: #000000;
-  margin-left: 10px;
-  font-size: 12px;
-}
-
-.navi a:hover {
-  color: #000000;
-  font-size: 12px;
-}
-
 .footer_container {
   width: 100%;
   height: 30px;
@@ -115,6 +104,7 @@
 
 .keyword_search {
     position: relative;
+    margin-right: 15px;
 }
 
 /* style icon */
@@ -159,6 +149,20 @@ li.search a:hover {
     display: none;
   }
 
+  .navbar-nav li a {
+    color: #3F464C;
+    margin-left: 10px;
+    font-size: 15px;
+    border: none;
+  }
+
+  .navbar-nav li a:hover {
+    color: #58626B;
+    font-size: 15px;
+    background-color: transparent;
+    // text-decoration: underline;
+  }
+
 }
 
 @media (max-width:767px) {
@@ -174,17 +178,17 @@ li.search a:hover {
   }
 
   .navbar-toggle {
-  position: relative;
-  float: left;
-  padding: 9px 10px;
-  margin-top: 12px;
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 8px;
-  background-color: transparent;
-  background-image: none;
-  border: 1px solid transparent;
-  border-radius: 4px;
+    position: relative;
+    float: left;
+    padding: 9px 10px;
+    margin-top: 12px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 8px;
+    background-color: transparent;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
   }
 
   .navbar-toggle .icon-bar {
@@ -196,7 +200,7 @@ li.search a:hover {
     margin-top: 4px;
     background-color: #000000;
   }
-  
+
   .navi li {
     text-align: center;
   }
@@ -214,6 +218,7 @@ li.search a:hover {
   .navi a:hover {
     color: #000000;
     font-size: 14px;
+    background-color: transparent;
   }
 
 
