--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -41,26 +41,31 @@ html body {
 
 .devise_container {
   background-color: #ffffff;
-  opacity: 0.9;
-  /*width: 250px;*/
+  // opacity: 0.9;
+  width: 420px;
   /*float: right;*/
-  margin-top: 150px;
+  margin-top: 100px;
   /*margin-right: 250px;*/
-  padding: 10px 80px 10px 80px;
+  padding: 20px 60px 20px 60px;
   display: inline-block;
 }
 
-.devise_container_signup {
-  background-color: #ffffff;
-  opacity: 0.9;
-  /*width: 250px;*/
-  /*float: right;*/
-  margin-top: 100px;
-  margin-bottom: 50px;
-  /*margin-right: 250px;*/
-  padding: 10px 40px 30px 40px;
-  display: inline-block;
+.devise_container>p {
+  font-size: 25px;
+  margin-bottom: 20px;
 }
+
+// .devise_container_signup {
+//   background-color: #ffffff;
+//   opacity: 0.9;
+//   width: 420px;
+//   /*float: right;*/
+//   margin-top: 100px;
+//   margin-bottom: 50px;
+//   /*margin-right: 250px;*/
+//   padding: 10px 40px 30px 40px;
+//   display: inline-block;
+// }
 
 .message {
   /*width: 400px;*/
@@ -91,6 +96,65 @@ html body {
   text-decoration: none;
 }
 
+
+.facebook_login img {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.facebook_login p {
+  color: #fff;
+  border: 1px solid rgba(0,0,0,0.3);
+  height: 50px;
+  line-height: 50px;
+  display: block;
+  text-align: center;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  background: #3B5998;
+}
+
+.mail_login input {
+  border: 1px solid #e3e3e3;
+  outline: 0;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  height: 30px;
+  width: 300px;
+}
+
+.form-group>label {
+  font-size: 10px;
+  font-weight: normal;
+  text-align: left;
+}
+
+.mail_login .form_btn {
+  background-color: #FF4F4C;
+  width: 200px;
+  margin: 0 auto;
+  border-radius: 3px;
+  margin-bottom: 20px;
+  margin-top: 30px;
+}
+
+.mail_login .form_btn input {
+  border: none;
+  color: #fff
+}
+
+.devise a {
+  display: inline-block;
+  margin-bottom: 10px;
+  font-size: 12px;
+}
+
+input#user_avatar {
+  border: none;
+}
+
 @media (min-width: 768px) {
   .mail_login {
     display: inline-block;
@@ -99,12 +163,13 @@ html body {
 
 @media (max-width:767px) {
   .message {
-  padding-top: 115px;
+    padding-top: 115px;
   }
 
   .devise_container {
-    margin-top: 50px;
-    background-color: transparent;
+    margin-top: 120px;
+    background-color: #ffffff;
+    zoom: 0.8;
   }
 
   html body {
@@ -112,17 +177,17 @@ html body {
   }
 
   .mail_login {
-    display: none;
+    // display: none;
   }
 
   .devise {
-    display: none;
+    // display: none;
   }
 
-  .facebook_login img {
-    width: 200px;
-    margin-top: 100px;
-  }
+  // .facebook_login img {
+  //   width: 200px;
+  //   margin-top: 100px;
+  // }
 
 }
 
