--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,52 +8,52 @@
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body class="wide_screen">
-    <div class="devise_wrapper col-xs-12">
-    <div class="devise_container_signup">
-    <h2>
-      <p class="devise">Sign up</p>
-    </h2>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:multipart => true}) do |f| %>
-        <%= devise_error_messages! %>
-      <!-- <div class="form-horizontal"> -->
-        <div class="form-group"><%= f.label :Nickname, class: "controll-label" %><br />
-          <%= f.text_field :nickname, autofocus: true, :placeholder => 'Nickname', class: "form-controll" %></div>
-      <!-- </div> -->
-      <!-- <div class="form-horizontal"> -->
-        <div class="form-group">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, :placeholder => 'e-mail' %>
-        <!-- </div> -->
-      </div>
-        <div class="form-group">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "off", :placeholder => 'password' %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => 'password' %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :profile_image %><br />
-          <%= f.file_field :avatar, autofocus: true, value: "" %>
-        </div>
+  <body class="wide_screen clearfix">
+    <div class="row">
+    <div class="devise_wrapper col-sm-12 col-xs-12">
+      <div class="devise_container">
+          <p>Getting Started</p>
+          <div class="facebook_login">
+          <%= link_to user_omniauth_authorize_path(:facebook) do %>
+          <p>Facebookで続ける</p>
+          <%#= image_tag 'https://www.vetshq.com/rails/assets/facebook-login-button-0edd7189f09e073f6dd098a55cbab45b.png' %>
+          <% end %>
+          </div>
+          <hr>
+          <div class="mail_login">
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:multipart => true}) do |f| %>
+              <%= devise_error_messages! %>
+              <div class="form-group"><%= f.label :Nickname, class: "controll-label" %><br />
+                <%= f.text_field :nickname, autofocus: true, :placeholder => 'Nickname', class: "form-controll" %></div>
+              <div class="form-group">
+                <%= f.label :メールアドレス %><br />
+                <%= f.email_field :email, autofocus: true, :placeholder => 'register@shares.com' %>
+              <!-- </div> -->
+            </div>
+              <div class="form-group">
+                <%= f.label :パスワード %>
+                <% if @minimum_password_length %>
+                <!-- <em>(<%#= @minimum_password_length %> characters minimum)</em> -->
+                <% end %><br />
+                <%= f.password_field :password, autocomplete: "off", :placeholder => '8文字以上' %>
+              </div>
+              <div class="form-group">
+                <%= f.label :profile_image %><br />
+                <%= f.file_field :avatar, autofocus: true, value: "" %>
+              </div>
 
           <div class="form-group form_btn">
             <%= f.submit "Sign up" %>
           </div>
-      <% end %>
+            <% end %>
+          </div>
 
-      <div class="devise form_btn">
-        <%= render "devise/shared/links" %>
+<!--           <div class="devise">
+            <%#= render "devise/shared/links" %>
+          </div> -->
       </div>
     </div>
-    </div>
+
     <footer class="footer_container">
       <!-- <p>copyright2015</p> -->
     </footer>
