・ログイン画面のデザイン変更 ・ログイン周りのパスの変更

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,5 +1,23 @@
-トップページ
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Shares</title>
+    <link href='https://fonts.googleapis.com/css?family=Fugaz+One' rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body class="wide_screen clearfix">
 
-<a href="/users/sign_in/">サインイン</a>
 
-<a href="/users/sign_up/">サインアップ</a>
+		<a href="/users/sign_in/">サインイン</a>
+
+		<a href="/users/sign_up/">サインアップ</a>
+
+    <footer class="footer_container">
+      <!-- <p>copyright2015</p> -->
+    </footer>
+
+  </body>
+</html>
