--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -67,6 +67,16 @@ html body {
 //   display: inline-block;
 // }
 
+#error_explanation h2 {
+  font-size: 12px;
+  color: red;
+  margin-top: 0;
+}
+
+#error_explanation ul li {
+  font-size: 12px;
+}
+
 .message {
   /*width: 400px;*/
   padding-top: 150px;
@@ -83,17 +93,27 @@ html body {
 
 .field input {
   margin-bottom: 20px;
-  width: 250px;
+  border: 1px solid #e3e3e3;
+  outline: 0;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  height: 30px;
+  width: 300px;
 }
 
 .actions input {
   background-color: transparent;
   border: none;
-  text-decoration: underline;
+  text-decoration: none;
+  color: #23527c;
+  font-size: 12px;
 }
 
 .actions input:hover {
-  text-decoration: none;
+  text-decoration: underline;
+  color: #23527c;
+  font-size: 12px;
 }
 
 
