--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -10,9 +10,9 @@
   </head>
   <body class="wide_screen">
     <div class="devise_wrapper col-xs-12">
-    <div class="devise_container_signup">
+    <div class="devise_container">
 
-    <h2>Forgot your password?</h2>
+    <p>Forgot your password?<p>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
