--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,8 +23,8 @@
           <div class="mail_login">
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:multipart => true}) do |f| %>
               <%= devise_error_messages! %>
-              <div class="form-group"><%= f.label :Nickname, class: "controll-label" %><br />
-                <%= f.text_field :nickname, autofocus: true, :placeholder => 'Nickname', class: "form-controll" %></div>
+              <div class="form-group"><%= f.label :ユーザー名, class: "controll-label" %><br />
+                <%= f.text_field :nickname, autofocus: true, :placeholder => 'ユーザー名', class: "form-controll" %></div>
               <div class="form-group">
                 <%= f.label :メールアドレス %><br />
                 <%= f.email_field :email, autofocus: true, :placeholder => 'register@shares.com' %>
