--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -9,15 +9,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body class="wide_screen clearfix">
-
-
-		<a href="/users/sign_in/">サインイン</a>
-
-		<a href="/users/sign_up/">サインアップ</a>
-
-    <footer class="footer_container">
-      <!-- <p>copyright2015</p> -->
-    </footer>
-
+  	<div class="container">
+		<div class="row">
+			<div id="header">
+				<a href="/users/sign_in/">サインイン</a>
+				<a href="/users/sign_up/">サインアップ</a>
+			</div>
+	  		<div id="main_visual" class="message_wrapper col-sm-12 col-xs-12">
+	      		<div class="message">
+	        		<div><h1>Shares!</h1></div>
+	        		<div class="service_message">
+	          		<p>
+	            	友達、同僚との情報共有に困ったことありませんか？<br>
+	            	Shares!を使って、スムーズな情報共有を楽しみましょう。<br>
+	          		</p>
+	        		</div>
+	      		</div>
+				<div class="start_button">
+					<a href="users/sign_in/">いますぐ始める</a>
+				</div>
+				<div class="detail">
+					<a href="#features">MORE ABOUT SHARES</a>
+				</div>
+	    	</div>
+		</div>
+    	<div id="features">
+    		
+    	</div>
+	    <footer class="footer_container">
+	      <!-- <p>copyright2015</p> -->
+	    </footer>
+	</div>
   </body>
 </html>
