TOPページ制作により、ルートを変更

--- a/app/views/layouts/default_layout.html.erb
+++ b/app/views/layouts/default_layout.html.erb
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
     </button>
 
-      <div class="logo col-xs-9"><a href="/">Shares!</a></div>
+      <div class="logo col-xs-9"><a href="/groups">Shares!</a></div>
       <!-- <div class="search sp_my_page col-xs-2">
         <%#= link_to "/users/#{current_user.nickname}" do %>
                 <span class="glyphicon glyphicon-user" aria-hidden="true" style="color: black;"></span>
