・ページタイトル表示エリアのCSSを変更 ・TOPページに「すでにメンバーの方はこちら」のボタンを追加

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -12,7 +12,8 @@
   	<div class="container">
 		<div class="row">
 			<div id="header">
-				<a href="/users/sign_in/">サインイン</a>
+				<a href="#features">Sharesとは</a>
+				<a href="/users/sign_in/">ログイン</a>
 				<a href="/users/sign_up/">サインアップ</a>
 			</div>
 	  		<div id="main_visual" class="message_wrapper col-sm-12 col-xs-12">
@@ -27,6 +28,9 @@
 	      		</div>
 				<div class="start_button">
 					<a href="users/sign_in/">いますぐ始める</a>
+				</div>
+				<div class="member_button">
+					<a href="/groups">すでにメンバーの方はこちら</a>
 				</div>
 				<div class="detail">
 					<a href="#features">MORE ABOUT SHARES</a>
