--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -23,19 +23,20 @@
 
 .page_title {
   width: 100%;
+  height: 50px;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
   font-size: 14px;
-  background-color: #ffffff;
-  opacity: 0.9;
+  background-color: #000000;
+  opacity: 0.6;
   position: absolute;
   bottom: 0;
 }
 
 .page_partial .page_title p {
-  color: #000000;
+  color: #ffffff;
   height: 100%;
   width: 100%;
   margin-bottom: 0;
