--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -44,7 +44,7 @@
 	top: 30px;
 	display: inline-block;
 	text-align: center;
-	margin-bottom: 60px;
+	margin-bottom: 20px;
 }
 
 .start_button a {
@@ -64,6 +64,28 @@
 .start_button a:hover {
 	text-decoration: none;
 }
+
+.member_button {
+  margin-bottom: 30px;
+}
+
+.member_button a {
+    display: inline-block;
+    width: 300px;
+    height: 50px;
+    background-color: transparent;
+    border: 2px solid white;
+    color: white;
+    line-height: 50px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+}
+
+.member_button a:hover {
+  text-decoration: none;
+}
+
 
 #features {
 	height: 500px;
