ログイン画面の赤いエリアを削除

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -25,5 +25,5 @@ $white: white;
 body,html {
   width: 100%;
   height: 100%;
-  background-color: $lightGray;
+  // background-color: $lightGray;
 }
