--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -87,7 +87,7 @@
 }
 
 
-#features {
-	height: 500px;
-	background-color: red;
-}
+// #features {
+// 	height: 500px;
+// 	background-color: red;
+// }
