--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -37,12 +37,12 @@
 				</div>
 	    	</div>
 		</div>
-    	<div id="features">
+<!--     	<div id="features">
     		
-    	</div>
-	    <footer class="footer_container">
+    	</div> -->
+	    <!-- <footer class="footer_container"> -->
 	      <!-- <p>copyright2015</p> -->
-	    </footer>
+	    <!-- </footer> -->
 	</div>
   </body>
 </html>
