group一覧のヘッダーにプロフィール写真が表示されるように修正

--- a/app/assets/stylesheets/default_application.scss
+++ b/app/assets/stylesheets/default_application.scss
@@ -61,6 +61,12 @@
   line-height: 1;
 }
 
+.name img {
+  margin-right: 10px;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+}
+
 .name a {
   font-size: 20px;
   font-weight: bold;
