新しいデザインに変更

--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -9,6 +9,7 @@
           <div class="background_no_image" style="background-image: url('../images/no_image.png')"></div>
         <%# end %>-->
           <p><%= group.name %></p>
+          <%= @number %>
       <% end %>
       <!-- <li class="group_delete"> -->
         <%#= link_to "/groups/#{group.id}", method: :delete do %>
