--- a/app/views/users/_page.html.erb
+++ b/app/views/users/_page.html.erb
@@ -1,5 +1,5 @@
-<div class="page_partial col-sm-4 col-xs-12">
-  <a href="<%= page.url %>" target="_blank" class="page_page" style="background-image: url(<%= page.image_url %>); background-size: cover;">
+<div class="page_partial col-sm-3 col-xs-12">
+  <a href="<%= page.url %>" target="_blank" class="page_page" style="background-image: url(<%= page.image_url %>); background-size: cover; background-position: center; ">
     <div class="page_title">
       <p><%= page.title %></p>
     </div>
