--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4241,7 +4241,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar {
   position: relative;
   min-height: 50px;
-  margin-bottom: 20px;
+  margin-top: 5px;
+  margin-bottom: 15px;
   border: 1px solid transparent;
 }
 @media (min-width: 768px) {
