--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -190,18 +190,20 @@ input#user_avatar {
 
 .form_btn input, .form_btn a {
   width: 152px;
-  border: 1px solid;
+  border: 1px solid #62AB77;
   border-radius: 5px;
-  background-color: transparent;
+  background-color: #62AB77;
   padding: 3px 12px;
   font-size: 12px;
+  color: #ffffff;
 }
 
 .modal-footer input {
   width: 152px;
-  border: 1px solid;
+  border: 1px solid #62AB77;
   border-radius: 5px;
-  background-color: transparent;
+  background-color: #62AB77;
   padding: 3px 12px;
   font-size: 12px;
+  color: #ffffff;
 }
