--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,14 +2,75 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.header_title {
+  background-color: #DCDCDC;
+  text-align: center;
+  height: 60px;
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 3.7;
+  margin-bottom: 20px;
+}
+
+// .back_to_group li {
+//   list-style: none;
+//   float: left;
+//   margin-right: 15px;
+// }
+
+// .back_to_group li a {
+//   color: #ffffff;
+//   background-color: #454545;
+//   border-radius: 30px;
+//   display: inline-block;
+//   width: 120px;
+//   line-height: 2.5;
+//   font-size: 12px;
+// }
+
+// .back_to_group li a:hover {
+//   text-decoration: none;
+// }
+
+.group_member {
+  height: 40px;
+  text-align: center;
+}
+
+.group_member li {
+  list-style: none;
+  float: right;
+  margin-right: 15px;
+}
+
+.group_member li a {
+  color: #ffffff;
+  background-color: #454545;
+  border-radius: 30px;
+  display: inline-block;
+  width: 120px;
+  line-height: 2.5;
+  font-size: 12px;
+}
+
+.group_member li a:hover {
+  text-decoration: none;
+}
+
+.group_member .back_to_group li {
+  height: 30px;
+  float: left;
+  margin-left: 15px;
+}
+
 .page_partial {
-  height: 250px;
+  height: 220px;
   // margin: 15px 10px 0 10px;
   padding: 10px;
 }
 
-.group_member {
-  display: none;
+.page_partial > a {
+  border: 0.5px solid #DCDCDC;
 }
 
 .page_partial>a {
@@ -23,14 +84,14 @@
 
 .page_title {
   width: 100%;
-  height: 50px; 
+  height: 45px; 
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
-  font-size: 14px;
+  font-size: 12px;
   background-color: #000000;
-  opacity: 0.6;
+  opacity: 0.8;
   position: absolute;
   bottom: 0;
 }
@@ -104,29 +165,5 @@
     bottom: 0;
   }
 
-  .group_member {
-    display: block;
-    margin-bottom: 30px;
-  }
-
-  .group_member li {
-    list-style: none;
-    padding: 0;
-    text-align: center;
-  }
-
-  .group_member li a {
-    color: #000000;
-    border: 1px solid black;
-    border-radius: 30px;
-    display: inline-block;
-    width: 120px;
-    line-height: 2;
-    font-size: 12px;
-  }
-
-  .group_member li a:hover {
-    text-decoration: none;
-  }
 
 }
