--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,5 +1,5 @@
 .search_partial {
-  height: 250px;
+  height: 220px;
   // margin: 15px 10px 0 10px;
   padding: 10px;
 }
@@ -15,19 +15,20 @@
 
 .search_page_title {
   width: 100%;
+  height: 45px;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
-  font-size: 14px;
-  background-color: #ffffff;
-  opacity: 0.9;
+  font-size: 12px;
+  background-color: #000000;
+  opacity: 0.8;
   position: absolute;
   bottom: 0;
 }
 
 .search_page_title p {
-  color: #000000;
+  color: #ffffff;
   height: 100%;
   width: 100%;
   margin-bottom: 0;
