--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -92,12 +92,13 @@ h2 {
 
 .user input {
   width: 100px;
-  border: 1px solid;
+  border: 1px solid #62AB77;
   border-radius: 5px;
-  background-color: transparent;
+  background-color: #62AB77;
   padding: 3px 12px;
   font-size: 12px;
   margin-top: 10px;
+  color: #ffffff;
 }
 
 .user_keyword {
