--- a/app/views/layouts/default_layout.html.erb
+++ b/app/views/layouts/default_layout.html.erb
@@ -38,7 +38,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right navi">
-        <% if controller.controller_name == "groups" %>
+        <%# if controller.controller_name == "groups" %>
            <li class="keyword pc_search">
             <%#= link_to '記事検索', "/searches/" %>
             <%= form_tag("/searches/search", method: :get) do %>
@@ -64,39 +64,39 @@
             <%= link_to 'サインアウト',  destroy_user_session_path, method: :delete %>
           </li>
 
-        <% elsif controller.controller_name == "pages" %>
-          <li class="sp_menu">
+        <%# elsif controller.controller_name == "pages" %>
+          <!-- <li class="sp_menu">
             <a data-toggle="modal" href="#myModal">ページを保存する</a>
           </li>
+          <li> -->
+            <%#= link_to 'メンバー一覧', "/groups/#{@group.id}/users" %>
+          <!-- </li>
           <li>
-            <%= link_to 'メンバー一覧', "/groups/#{@group.id}/users" %>
-          </li>
-          <li>
-            <%= link_to 'メンバー追加', "/groups/#{@group.id}/users/invite/" %>
-          </li>
+            <%#= link_to 'メンバー追加', "/groups/#{@group.id}/users/invite/" %>
+          </li> -->
 
-        <% elsif controller.controller_name == "users" && controller.action_name != "show" %>
-          <li>
-            <%= link_to 'ページ一覧', "/groups/#{@group.id}/pages" %>
+        <%# elsif controller.controller_name == "users" && controller.action_name != "show" %>
+          <!-- <li>
+            <%#= link_to 'ページ一覧', "/groups/#{@group.id}/pages" %>
           </li>
+          <li> -->
+            <%#= link_to 'メンバー一覧', "/groups/#{@group.id}/users" %>
+          <!-- </li>
           <li>
-            <%= link_to 'メンバー一覧', "/groups/#{@group.id}/users" %>
-          </li>
-          <li>
-            <%= link_to 'メンバー追加', "/groups/#{@group.id}/users/invite/" %>
-          </li>
+            <%#= link_to 'メンバー追加', "/groups/#{@group.id}/users/invite/" %>
+          </li> -->
 
-        <% elsif controller.controller_name == "searches" %>
-          <li class="search">
+        <%# elsif controller.controller_name == "searches" %>
+          <!-- <li class="search">
             <a data-toggle="modal" href="#myModal_search">
               <span class="glyphicon glyphicon-search" aria-hidden="true" style="color: black;"></span>
             </a>
           </li>
           <div class="name">
-            <%= link_to "#{current_user.nickname}", "/users/#{current_user.nickname}" %>
-          </div>
+            <%#= link_to "#{current_user.nickname}", "/users/#{current_user.nickname}" %>
+          </div> -->
 
-        <% elsif controller.controller_name == "users" && controller.action_name == "show" %>
+        <% if controller.controller_name == "users" && controller.action_name == "show" %>
           <li>
             <%= link_to 'サインアウト',  destroy_user_session_path, method: :delete %>
           </li>
