--- a/app/views/searches/_search.html.erb
+++ b/app/views/searches/_search.html.erb
@@ -1,7 +1,7 @@
 
     <% @pages.each do |page| %>
-    <div class="search_partial col-sm-4 col-xs-12">
-      <a href="<%= page.url %>" target="_blank" class="search_page" style="background-image: url(<%= page.image_url %>); background-size: cover;">
+    <div class="search_partial col-sm-3 col-xs-12">
+      <a href="<%= page.url %>" target="_blank" class="search_page" style="background-image: url(<%= page.image_url %>); background-size: cover; background-position: center; ">
         <div class="search_page_title">
           <p><%= page.title %></p>
         </div>
