--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="header_title">
+    <p>マイページ</p>
+  </div>
 	<div class="row">
 		<div class="profile_image col-sm-4 col-xs-12">
         <% if current_user.fb_image.blank? %>
@@ -12,7 +15,7 @@
 				<%= current_user.nickname %>
 			</div>
 			<li class="go_to_group">
-				<a href="/">グループ一覧を見る</a>
+				<a href="/groups">グループ一覧を見る</a>
 			</li>
 		</div>
 	</div>
