ヘッダー画像のサイズを変更

--- a/app/assets/stylesheets/default_application.scss
+++ b/app/assets/stylesheets/default_application.scss
@@ -65,6 +65,8 @@
   margin-right: 10px;
   border-radius: 30px;
   -webkit-border-radius: 30px;
+  width: 30px;
+  max-height: 30px;
 }
 
 .name a {
