--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -55,6 +55,7 @@ h2 {
 
 .user_image img {
   width: 100px;
+  max-height: 100px;
   border-radius: 100px;
   -webkit-border-radius: 100px;
   -moz-border-radius: 100px;
