--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -8,8 +8,9 @@
         <%# else %>
           <div class="background_no_image" style="background-image: url('../images/no_image.png')"></div>
         <%# end %>-->
-          <p><%= group.name %></p>
-          <%= group.users_groups.count %>
+          <div class="group_name"><%= group.name %>
+            <p class="group_number"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= group.users_groups.count %></p>
+          </div>
       <% end %>
       <!-- <li class="group_delete"> -->
         <%#= link_to "/groups/#{group.id}", method: :delete do %>
