--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -129,6 +129,10 @@ html body {
   margin-top: 30px;
 }
 
+.mail_login input {
+  background-color: transparent;
+}
+
 .mail_login .form_btn input {
   border: none;
   color: #fff
@@ -192,7 +196,7 @@ input#user_avatar {
   width: 152px;
   border: 1px solid #62AB77;
   border-radius: 5px;
-  background-color: #62AB77;
+  // background-color: #62AB77;
   padding: 3px 12px;
   font-size: 12px;
   color: #ffffff;
