sharesロゴの修正（ロゴ変更、サイズ変更）

--- a/app/assets/stylesheets/default_application.scss
+++ b/app/assets/stylesheets/default_application.scss
@@ -4,10 +4,11 @@
 }
 
 .logo {
-  font-size: 40px;
+  font-size: 30px;
   font-family: 'Fugaz One', cursive;
   margin-left: 10px;
   padding-right: 10px;
+  padding-top: 4px;
 }
 
 .logo a {
