--- a/app/views/layouts/default_layout.html.erb
+++ b/app/views/layouts/default_layout.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Shares</title>
+  <title>Shars!</title>
   <link href='https://fonts.googleapis.com/css?family=Fugaz+One' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
     </button>
 
-      <div class="logo col-xs-9"><a href="/groups">Shares!</a></div>
+      <div class="logo col-xs-9"><a href="/groups">Shars!</a></div>
       <!-- <div class="search sp_my_page col-xs-2">
         <%#= link_to "/users/#{current_user.nickname}" do %>
                 <span class="glyphicon glyphicon-user" aria-hidden="true" style="color: black;"></span>
