--- a/app/assets/stylesheets/default_application.scss
+++ b/app/assets/stylesheets/default_application.scss
@@ -173,6 +173,7 @@ li.search a:hover {
     text-align: center;
     padding: 0;
     margin: 0;
+    margin-top: 10px;
   }
 
   .container-fluid>.navbar-header {
