--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -170,7 +170,7 @@
     padding-top: 5px;
     padding-bottom: 5px;
     font-size: 12px;
-    background-color: #ffffff;
+    background-color: #000000;
     opacity: 0.9;
     position: absolute;
     bottom: 0;
