--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,14 +7,25 @@
     	<%#= render partial: "user", collection: @users %>
   	</div> -->
     <div class="group_member">
-      <li>
+      <li class="back_to_group">
+        <%= link_to 'ページ一覧へ', "/groups/#{@group.id}/pages" %>
+      </li>
+      <li class="member_show">
         <%= link_to 'メンバー一覧', "/groups/#{@group.id}/users" %>
       </li>
-      <li>
+      <li class="member_invite">
         <%= link_to 'メンバー追加', "/groups/#{@group.id}/users/invite/" %>
       </li>
-      <li class="back_to_group" style="float: left; margin-left: 15px">
+    </div>
+    <div class="sp_group_member">
+      <li class="back_to_group col-xs-4">
         <%= link_to 'ページ一覧へ', "/groups/#{@group.id}/pages" %>
+      </li>
+      <li class="member_show col-xs-4">
+        <%= link_to 'メンバー一覧', "/groups/#{@group.id}/users" %>
+      </li>
+      <li class="member_invite col-xs-4">
+        <%= link_to 'メンバー追加', "/groups/#{@group.id}/users/invite/" %>
       </li>
     </div>
 
