--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -61,8 +61,8 @@
   </div>
   <!-- モーダル終了 -->
 
-<!--<div class="plus_btn">
-  <a data-toggle="modal" href="#myModal"><%#= image_tag'plus.png' %></a>
-  </div> -->
+  <div class="plus_btn">
+    <a data-toggle="modal" href="#myModal"><%= image_tag'plus.png' %></a>
+  </div>
 </div>
 
