--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -12,11 +12,38 @@
             <p class="group_number"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= group.users_groups.count %></p>
           </div>
       <% end %>
-      <!-- <li class="group_delete"> -->
-        <%#= link_to "/groups/#{group.id}", method: :delete do %>
-          <!-- <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: white;" ></span> -->
+      <li class="group_edit">
+        <%#= link_to "/groups/#{group.id}/edit/", method: :get do %>
+          <!--<p>編集する</p>-->
+          <!-- <span class="glyphicon glyphicon-pencil" aria-hidden="true" style="color: black;" ></span> -->
         <%# end %>
-      <!-- </li> -->
+        <a data-toggle="modal" href="#myModal_edit_<%= group.id %>">編集する</a>
+      </li>
+      <li class="group_delete">
+        <%= link_to "/groups/#{group.id}", method: :delete do %>
+          <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: white;" ></span>
+        <% end %>
+      </li>
     </div>
+      <!-- グループ編集モーダル開始 -->
+  <div class="modal fade" id="myModal_edit_<%= group.id %>">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button class="close" data-dismiss="modal">&times;</button>
+          <p class="modal-title">グループを編集する</p>
+        </div>
+        <div>
+          <%#= image_tag'group.png' %>
+        </div>
+          <%= form_for group do |f| %>
+            <%= render "edit", f: f %>
+          <% end %>
+      </div>
+    </div>
+  </div>
+  <!-- モーダル終了 -->
+
+
   </div>
 <% end %>
