ユーザー追加、一覧画面を修正 ・削除を罰ボタンに ・追加ページへ直接行くことはなしに

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -107,14 +107,14 @@ h2 {
   margin-bottom: 30px;
 }
 
-.user_keyword input {
-  border: 1px solid #8F9FAD;
-  width: 200px;
-  height: 30px;
-  margin-left: 20px;
-  padding-left: 27px;
-  border-radius: 25px;
-}
+// .user_keyword input {
+//   border: 1px solid #8F9FAD;
+//   width: 200px;
+//   height: 30px;
+//   margin-left: 20px;
+//   padding-left: 27px;
+//   border-radius: 25px;
+// }
 
 .user_keyword .glyphicon {
   position: absolute;
