--- a/app/views/users/invite.html.erb
+++ b/app/views/users/invite.html.erb
@@ -83,8 +83,8 @@
   </div>
   <!-- モーダル終了 -->
 
-  <div class="plus_btn">
-  <a data-toggle="modal" href="#user_search"><%= image_tag'plus.png' %></a>
-  </div>
+<!--   <div class="plus_btn">
+  <a data-toggle="modal" href="#user_search"><%#= image_tag'plus.png' %></a>
+  </div> -->
 
 </div>
