--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -12,18 +12,23 @@
             <p class="group_number"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= group.users_groups.count %></p>
           </div>
       <% end %>
-      <li class="group_edit">
-        <%#= link_to "/groups/#{group.id}/edit/", method: :get do %>
-          <!--<p>編集する</p>-->
-          <!-- <span class="glyphicon glyphicon-pencil" aria-hidden="true" style="color: black;" ></span> -->
-        <%# end %>
-        <a data-toggle="modal" href="#myModal_edit_<%= group.id %>">編集する</a>
-      </li>
-      <li class="group_delete">
-        <%= link_to "/groups/#{group.id}", method: :delete do %>
-          <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: white;" ></span>
-        <% end %>
-      </li>
+      <ul>
+        <li class="group_edit">
+          <%#= link_to "/groups/#{group.id}/edit/", method: :get do %>
+            <!--<p>編集する</p>-->
+            <!-- <span class="glyphicon glyphicon-pencil" aria-hidden="true" style="color: black;" ></span> -->
+          <%# end %>
+          <a data-toggle="modal" href="#myModal_edit_<%= group.id %>">編集する</a>
+        </li>
+        <li class="">
+          <%= link_to 'メンバー一覧', "/groups/#{group.id}/users" %>
+        </li>
+        <li class=""> <!-- class=group_delete -->
+          <%= link_to '削除する', "/groups/#{group.id}", method: :delete %>
+            <!-- <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: white;" ></span> -->
+          <%# end %>
+        </li>
+      </ul>
     </div>
       <!-- グループ編集モーダル開始 -->
   <div class="modal fade" id="myModal_edit_<%= group.id %>">
