--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,9 +10,9 @@
       <li class="back_to_group">
         <%= link_to 'ページ一覧へ', "/groups/#{@group.id}/pages" %>
       </li>
-      <li class="member_show">
-        <%= link_to 'メンバー一覧', "/groups/#{@group.id}/users" %>
-      </li>
+<!--       <li class="member_show">
+        <%#= link_to 'メンバー一覧', "/groups/#{@group.id}/users" %>
+      </li> -->
 <!--       <li class="member_invite">
         <%#= link_to 'メンバー追加', "/groups/#{@group.id}/users/invite/" %>
       </li> -->
@@ -21,9 +21,9 @@
       <li class="back_to_group col-xs-4">
         <%= link_to 'ページ一覧へ', "/groups/#{@group.id}/pages" %>
       </li>
-      <li class="member_show col-xs-4">
-        <%= link_to 'メンバー一覧', "/groups/#{@group.id}/users" %>
-      </li>
+<!--       <li class="member_show col-xs-4">
+        <%#= link_to 'メンバー一覧', "/groups/#{@group.id}/users" %>
+      </li> -->
 <!--       <li class="member_invite col-xs-4">
         <%#= link_to 'メンバー追加', "/groups/#{@group.id}/users/invite/" %>
       </li> -->
@@ -78,7 +78,7 @@
   <%= form_tag("/groups/#{@group.id}/users/invite", method: :get) do %>
     <div class="user_keyword modal-body">
       <!-- <i class="glyphicon glyphicon-search"></i> -->
-      <input type="text", placeholder="ユーザー名を入力", name="nickname">
+      <input type="text", autofocus="autofocus", placeholder="ユーザー名を入力", name="nickname", id="myModal">
       <input type="submit" value="" id="search">
     </div>
   <% end %>
