--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -56,7 +56,8 @@
         </div>
         <%= form_for [@group, @page] do |f| %>
           <div class="modal-body">
-              <%= f.text_field :url, autofocus: true, :placeholder => 'http://...' %>
+              <%= f.text_field :url, autofocus: true, :placeholder => 'http://...', html: {id: "modalTitle"}  %>
+              <script>document.getElementById("modalTitle").focus()</script>
           </div>
           <div class="modal-footer">
               <%= f.submit "保存" %>
@@ -77,7 +78,7 @@
         </div>
       <%= form_tag("/searches/search", method: :get) do %>
         <i class="glyphicon glyphicon-search"></i>
-        <input type="text", autofocus="autofocus", placeholder="キーワードで検索", name="title", html: {class: "form-controll">
+        <input type="text", autofocus="autofocus", placeholder="キーワードで検索", name="title", html: {class: "form-controll"} >
         <label><input type="submit" value="" id="search"></label>
       <% end %>
       </div>
