ユーザー情報更新ページ作成（いったん）

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,8 @@
 			<li class="go_to_group">
 				<a href="/groups">グループ一覧を見る</a>
 			</li>
+        	<%= link_to '編集する', "/users/#{current_user.nickname}/edit" %>
+
 		</div>
 	</div>
 	<div class="my_pages">
