ユーザー情報編集画面、CSS調整

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -178,6 +178,14 @@ h2 {
   text-decoration: none;
 }
 
+.user_devise_wrapper {
+  padding-right: 0;
+  padding-left: 0;
+  text-align: center;
+  margin-top: 50px;
+}
+
+
 @media (max-width:767px) {
 
   .profile_image {
