--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+    <div class="row">
+    <div class="user_devise_wrapper col-sm-12 col-xs-12">
           <div class="mail_login">
           <%= form_for @user do |f| %>
               <%#= devise_error_messages! %>
@@ -17,11 +20,14 @@
               </div>
               <div class="form-group">
                 <%= f.label :profile_image %><br />
-                <%= f.file_field :avatar, autofocus: true, value: "" %>
+                <%= f.file_field :avatar, value: "" %>
               </div>
 
           <div class="form-group form_btn">
-            <%= f.submit "Sign up" %>
+            <%= f.submit "Update" %>
           </div>
             <% end %>
           </div>
+        </div>
+      </div>
+</div>
