--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,12 +10,13 @@
 		<div class="user_profile col-sm-8 col-xs-12">
 			<div class="profile_user_name">
 				<%= current_user.nickname %>
+          		<a data-toggle="modal" href="#myModal_edit_<%= current_user.id %>"><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="color: black;font-size: 20px;margin-left: 10px;"></span></a>
+
 			</div>
 			<li class="go_to_group">
-				<a href="/groups">グループ一覧を見る</a>
+				<a href="/groups">共有グループ数：<%= @groups.count %></a>
 			</li>
-        	<%= link_to '編集する', "/users/#{current_user.nickname}/edit" %>
-
+        	<%#= link_to '編集する', "/users/#{current_user.nickname}/edit" %>
 		</div>
 	</div>
 	<div class="my_pages">
@@ -63,6 +64,49 @@
     </div>
   </div>
   <!-- モーダル終了 -->
+
+  <!-- ユーザー編集モーダル開始 -->
+  <div class="modal fade" id="myModal_edit_<%= current_user.id %>">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button class="close" data-dismiss="modal">&times;</button>
+          	<p class="modal-title">ユーザー情報を編集する</p>
+        </div>
+          <%= form_for @user do |f| %>
+	          <div class="modal-body">
+              <div class="form-group"><%= f.label :ユーザー名, class: "controll-label" %><br />
+                <%= f.text_field :nickname, autofocus: true, :placeholder => 'ユーザー名', class: "form-controll" %></div>
+              <div class="form-group">
+                <%= f.label :メールアドレス %><br />
+                <%= f.email_field :email, autofocus: true, :placeholder => 'register@shares.com' %>
+            </div>
+              <div class="form-group">
+                <%= f.label :パスワード %>
+                <% if @minimum_password_length %>
+                <!-- <em>(<%#= @minimum_password_length %> characters minimum)</em> -->
+                <% end %><br />
+                <%= f.password_field :password, autocomplete: "off", :placeholder => '8文字以上' %>
+              </div>
+              <div class="form-group">
+                <%= f.label :profile_image %><br />
+                <%= f.file_field :avatar, value: "", class: "avatar-layout" %>
+              </div>
+          </div>
+		  <div class="modal-footer">
+          <div class="form-group form_btn">
+            <%= f.submit "Update" %>
+          </div>
+      </div>
+            <% end %>
+
+      </div>
+    </div>
+  </div>
+  <!-- モーダル終了 -->
+
+
+
   <div class="plus_btn">
     <a data-toggle="modal" href="#myModal"><%= image_tag'plus.png' %></a>
   </div>
